--- a/src/main/webapp/components/welcome/welcome.html
+++ b/src/main/webapp/components/welcome/welcome.html
@@ -1,12 +1,10 @@
-     <h1>Welcome to ORDS</h1>
+<h1>Welcome to ORDS</h1>
 
-     <div class="intro">
-          <p>The Online Research Database Service (ORDS) is an online relational 
-             database management system for researchers. 
-             It is hosted on public cloud infrastructure and supported by 
-             Cetis LLP on behalf of IT Services at the University of Oxford.</p>
-		 
-		 <p ng-show="showPendingMessage()"><em>{{pendingMessage}}</em></p>
-     </div><!-- .intro closes -->
+<div class="intro">
+	<p>The Online Research Database Service (ORDS) is an online relational database management system for researchers. It is hosted
+		on public cloud infrastructure and supported by Cetis LLP on behalf of IT Services at the University of Oxford.</p>
+
+	<p ng-show="showPendingMessage()"><em>{{pendingMessage}}</em></p>
+</div>
 	 
 	 
