--- a/src/main/webapp/database-explorer/components/vqd/vqd.css
+++ b/src/main/webapp/database-explorer/components/vqd/vqd.css
@@ -14,7 +14,7 @@
 		position: relative;
 		height: 400px;
 		margin: 10px;
-		background: url(../../../images/back.gif) fixed;
+		background: url(../../../style/images/back.gif) fixed;
 		resize: both;
 		overflow:auto;
 	}
