--- a/src/main/webapp/database/views/editdatabase.html
+++ b/src/main/webapp/database/views/editdatabase.html
@@ -60,7 +60,7 @@
 
                     
 	<div class="form-buttons">
-     <a class="button" href="#/project/{{project.projectId}}" name="cancel">Cancel</a>
+     <a class="button cancel" href="#/project/{{project.projectId}}" name="cancel">Cancel</a>
 	 <button name="submit" class="go-go-go" type="submit" ng-disabled="databaseForm.$invalid">Save</button>
 	</div>
 </form>
