--- a/src/main/webapp/less/forms.less
+++ b/src/main/webapp/less/forms.less
@@ -5,11 +5,14 @@
 */
 }
 
+input {
+  max-width: 100%;
+}
 
 .formItem {
-	margin: 0.5em ;
+    margin: 0.5em ;
 	text-align: left;
-
+    clear:both;
 }
 
 
@@ -28,7 +31,6 @@ div.form-buttons {
   
   text-align: center;
   width: auto;
-
 }
 
 
