--- a/src/main/webapp/views/contact.html
+++ b/src/main/webapp/views/contact.html
@@ -4,7 +4,7 @@
 
 <h1>Send an initial contact request to {{project.owner}} to discuss project {{project.name}}</h1>
 
-<form ng-submit="contact()" name="contactForm" id="contactForm">
+<form class="process" ng-submit="contact()" name="contactForm" id="contactForm">
 
     <div class="formItem">
         <label for="requestorName">
