--- a/src/main/webapp/database-explorer/views/explorer.html
+++ b/src/main/webapp/database-explorer/views/explorer.html
@@ -5,54 +5,64 @@
 	<span class="breadcrumbs youarehere">View, Edit and Query Data</span>
 </div>
 
-<div class="two-up db-list">
-	<div class="panel db-list">
-		<h2>Tables</h2>
-    	<ul>
-	    	<li ng-repeat="(key,val) in tableList.tables">
-		 	  	<p><a href="#/table/{{project.projectId}}/{{logicalDatabaseId}}/{{physicalDatabaseId}}/{{instance}}/table/{{key}}">{{key}}</a></p>
-	   		</li>
-    	</ul>
-	</div>
-	<div class="panel db-list">
-		<h2>Datasets</h2>
+<div class="row">
+	<div class="col-6">
 
+		<div class="panel">
+			<h2>Tables <i ng-hide="tableList.$resolved" class="pe-7s-refresh pe-va pe-spin"></i></h2>
+			<div ng-repeat="(key,val) in tableList.tables" ng-show="tableList.$resolved">
+				<h4>
+					<i class="pe-7s-albums pe-va"></i>
+					<a href="#/table/{{project.projectId}}/{{logicalDatabaseId}}/{{physicalDatabaseId}}/{{instance}}/table/{{key}}">{{key}}</a>
+					<i class="pe-7s-angle-right pe-va"></i>
+				</h4>
+			</div>
+		</div>
+		
+		<div class="panel">
+			<h2>Datasets <i ng-hide="datasetList.$resolved" class="pe-7s-refresh pe-va pe-spin"></i></h2>
+			<p></p>
 			<div ng-repeat="dataset in datasetList" ng-show="datasetList.$resolved">
-				<div>
-				<h3>{{dataset.viewName}} <em>({{dataset.viewAuthorization}})</em></h3>
-				<p>{{dataset.viewDescription}}</p>
-				</div>
-				<div class="floatRight">
+
+				<h4>
+					<i ng-show="dataset.viewAuthorization == 'private'" class="pe-7s-lock pe-va"></i>
+					<i ng-show="dataset.viewAuthorization != 'private'" class="pe-7s-unlock pe-va"></i>
+					<a href="#/table/{{project.projectId}}/{{logicalDatabaseId}}/{{physicalDatabaseId}}/{{instance}}/dataset/{{dataset.id}}">{{dataset.viewName}}</a>
+					<i class="pe-7s-angle-right pe-va"></i>
+				</h4>
+
+				<p style="white-space:pre-wrap;" ng-text-truncate="dataset.viewDescription" ng-tt-chars-threshold="255"></p>
+
+				<p>
 					<a class="button" href="#/table/{{project.projectId}}/{{logicalDatabaseId}}/{{physicalDatabaseId}}/{{instance}}/dataset/{{dataset.id}}">View</a>
 					<button ng-if="dataset.viewAuthorization=='public'" class="button" ng-click="getAPILink(dataset.id)">API</button>
 					<button class="button" ng-click="editDataset(dataset.id)">Edit</button>
 					<button class="button delete" ng-really-message="Are you sure you want to delete this dataset?" ng-really-click="deleteDataset(dataset.id)">Delete</button>
-				</div>
-			</div>
-	</div>
-</div>
-
-<div class="panel two-up options">
-
-	<h2>Run a Query</h2>
-	<!---
-<div><a class="disabledButton" href="">View previously saved datasets</a></div>
-<div><a class="disabledButton" href="">Query data using query builder</a></div>
-<div><a class="button" href="#/sql-query/{{project.projectId}}/{{logicalDatabaseId}}/{{logicalDatabaseName}}/{{physicalDatabaseId}}/{{instance}}/{{server}}">Query data using SQL</a></div>
--->
-	<vqd ng-show="tableList.$resolved" schema="tableList" sql="sql"></vqd>
-
-	<div>
-		<form>
-			<div class = "vqd_query">
-				<h3>Query</h3>
-				<textarea name="query" class="vqd_sql" placeholder="No data selected"></textarea>
-				<p>
-					<button class="button" ng-click="runQuery()">Run query</button>
-					<button class="button cancel" ng-click="clearQuery()">Clear query</button>
 				</p>
 			</div>
-		</form>
+		</div>
 	</div>
 
+	<div class="col-6">
+		<div class="panel">
+
+			<h2>Run a Query</h2>
+
+			<vqd ng-show="tableList.$resolved" schema="tableList" sql="sql"></vqd>
+
+			<div>
+				<form>
+					<div class="vqd_query">
+						<h3>Query</h3>
+						<textarea name="query" class="vqd_sql" placeholder="No data selected"></textarea>
+						<p>
+							<button class="button" ng-click="runQuery()">Run query</button>
+							<button class="button cancel" ng-click="clearQuery()">Clear query</button>
+						</p>
+					</div>
+				</form>
+			</div>
+
+		</div>
+	</div>
 </div>
