--- a/src/main/webapp/project/components/projectform/projectform.html
+++ b/src/main/webapp/project/components/projectform/projectform.html
@@ -51,7 +51,7 @@
     <input ng-model="project.odbcSet" type="checkbox" name="odbcSet" id="odbcSet">
 </div>
             <div class="form-buttons">
-                    <a class="button" href="#/project/{{project.projectId}}" name="cancel">Cancel</a>
+                    <a class="button cancel" href="#/project/{{project.projectId}}" name="cancel">Cancel</a>
                     <button name="submit" type="submit" ng-disabled="projectForm.$invalid">Save</button>
                 
             </div>
