--- a/src/main/webapp/project/components/projectlist/projectlist.html
+++ b/src/main/webapp/project/components/projectlist/projectlist.html
@@ -1,37 +1,38 @@
-<div class="my-projects">
-	<h2>My Projects</h2>
-	<div ng-hide="projects.$resolved">
-		<i class=“icon-loader spin”>Loading…</i>
-	</div>	
-	<div ng-show="projects.$resolved">
-        <h3>You are involved in {{projects.length}} projects</h3>
-            
-        <a ng-show="user.status!='PENDING_EMAIL_VERIFICATION'" class="button create" href="#/newproject"> Create new project</a>
+<div class="panel">
+	<h2>My Projects
+		<i ng-hide="projects.$resolved" class="pe-7s-refresh pe-spin"></i>
+		<a ng-show="user.status!='PENDING_EMAIL_VERIFICATION'" class="button create" href="#/newproject">Create new project</a>
+	</h2>
 
-    	<p class="panel"></p>
-        <div class="panel project"  dir-paginate="project in projects | orderBy:'name' | itemsPerPage: 5  track by project.projectId ">
-            <h4>
-                <a href="#/project/{{project.projectId}}">{{project.name}}</a>
-            </h4>
-            <div class="inner-child">
-                <div class="project-piece description">
-                    {{project.description}}
-                </div>
-				
-                <div ng-show="{{project.trialProject}}" class="project-piece description">
-                    This is a trial project. 
-                </div>
-				
-				
-                <div class="project-piece actions">
-					<a ng-show="project.canEdit" class="button create" href="#/project/{{project.projectId}}/edit">Edit</a>
-					<a ng-show="project.canDelete" class="button delete" ng-really-message="Are you sure you want to delete this project?" ng-really-click="delete(project.projectId)">Delete</a>
-                </div><!-- .project-piece actions closes -->
-                <div class="clear"></div>
-            </div>
-            <br>
-        </div>		
+	<p>You are involved in {{projects.length}} project<span ng-show="projects.length != 1">s</span></p>
+
+	<div ng-show="projects.$resolved" class="project" dir-paginate="project in projects | orderBy:'name' | itemsPerPage: 5  track by project.projectId ">
+		<h3>
+			<i class="pe-7s-notebook pe-va"></i>
+			<a href="#/project/{{project.projectId}}">{{project.name}}</a>
+			<i class="pe-7s-angle-right pe-va"></i>
+		</h3>
+
+		<div class="inner-child">
+			<div class="project-piece description">
+				{{project.description}}
+			</div>
+
+			<div ng-show="{{project.trialProject}}" class="project-piece description">
+				This is a trial project.
+			</div>
+
+			<div class="project-piece actions">
+				<a ng-show="project.canEdit" class="button create" href="#/project/{{project.projectId}}/edit">Edit</a>
+				<a ng-show="project.canDelete" class="button delete" ng-really-message="Are you sure you want to delete this project?" ng-really-click="delete(project.projectId)">Delete</a>
+			</div>
+			<!-- .project-piece actions closes -->
+			<div class="clear"></div>
+		</div>
+		<br>
 	</div>
-	<div ng-show="projects.$resolved"><dir-pagination-controls template-url="lib/pagination.tpl.html"></dir-pagination-controls></div>
-	
+
+	<div ng-show="projects.$resolved">
+		<dir-pagination-controls template-url="lib/pagination.tpl.html"></dir-pagination-controls>
+	</div>
 </div>
